@@ -1,5 +1,7 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2001-11-20 patrickh Created two new Java API libraries: TweekServices.jar and
+                    TweekEvents.jar.
 2001-11-18 patrickh Added the ability to request all subjects currently
                     registered with a tweek::SubjectManager.
 2001-11-18 patrickh Changed the use of tweek::SubjectManagerImpl so that there
